--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,9 +3,8 @@ spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=admin
 spring.datasource.password=
 
-spring.security.user.name=user
-spring.security.user.password=default
-
+#spring.security.user.name=user
+#spring.security.user.password=default
 
 server.port=8089
 
@@ -14,4 +13,3 @@ spring.h2.console.path=/h2-console
 
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=update
-
